--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <div class="w-full max-w-md animate-in fade-in zoom-in duration-500">
             <div class="text-center mb-10">
                <div class="w-20 h-20 bg-white rounded-3xl flex items-center justify-center mx-auto shadow-2xl mb-4 overflow-hidden">
-    <img src="logo.png" class="w-14 h-14 object-contain">
+    <img src="logo.jpg" class="w-20 h-20 object-contain">
 </div>
                 <h1 class="text-4xl font-black text-white tracking-tight">E-Perpus<span class="text-blue-400">Pro</span></h1>
                 <p class="text-slate-300 font-medium mt-2">Sistem Perpustakaan Cerdas</p>
@@ -108,7 +108,7 @@
         <header class="bg-white/90 backdrop-blur-md sticky top-0 z-[100] px-6 py-5 flex justify-between items-center border-b border-slate-100">
             <div class="flex items-center gap-4">
                <div class="w-11 h-11 bg-blue-50 rounded-2xl flex items-center justify-center shadow-inner overflow-hidden">
-    <img src="logo.png" class="w-7 h-7 object-contain">
+    <img src="logo.jpg" class="w-13 h-13 object-contain">
 </div>
                 <div>
                     <h2 id="pageTitle" class="text-lg font-extrabold text-slate-900 leading-none">Dashboard</h2>
