--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
                <div class="w-20 h-20 bg-white rounded-3xl flex items-center justify-center mx-auto shadow-2xl mb-4 overflow-hidden">
     <img src="logo.jpg" class="w-20 h-20 object-contain">
 </div>
-                <h1 class="text-4xl font-black text-white tracking-tight">E-Perpus<span class="text-blue-400">Pro</span></h1>
-                <p class="text-slate-300 font-medium mt-2">Sistem Perpustakaan Cerdas</p>
+                <h1 class="text-4xl font-black text-white tracking-tight">DigiPustaka<span class="text-blue-400">Pro</span></h1>
+                <p class="text-slate-300 font-medium mt-2">Sistem Perpustakaan Digital <small>by:raffhkm</small></p>
             </div>
 
             <div class="glass-card p-8 rounded-[32px] space-y-6">
@@ -92,7 +92,7 @@
                         <span class="absolute inset-y-0 left-4 flex items-center text-slate-400">
                             <i class="fas fa-shield-halved"></i>
                         </span>
-                        <input type="password" id="adminPass" placeholder="••••••••" 
+                        <input type="password" id="adminPass" placeholder="•••••" 
                             class="w-full pl-12 pr-4 py-4 bg-slate-50 border border-slate-100 rounded-2xl focus:ring-2 focus:ring-blue-500 focus:bg-white transition-all outline-none">
                     </div>
                 </div>
