--- a/index.html
+++ b/index.html
@@ -308,7 +308,13 @@
                         class="w-full pl-12 pr-4 py-4 bg-white search-input rounded-2xl text-sm" 
                         onkeyup="searchBooks(this.value)">
                 </div>
+<div id="bookTabs" class="flex gap-4 mb-4 overflow-x-auto no-scrollbar">
+    <button class="tab-btn bg-blue-600 text-white px-4 py-2 rounded-2xl font-bold" data-cat="Pelajaran">Pelajaran</button>
+    <button class="tab-btn bg-slate-200 text-slate-700 px-4 py-2 rounded-2xl font-bold" data-cat="Novel">Novel</button>
+    <button class="tab-btn bg-slate-200 text-slate-700 px-4 py-2 rounded-2xl font-bold" data-cat="Kamus">Kamus</button>
+</div>
 
+<div id="list-books"></div>
                 <div id="list-books" class="grid grid-cols-1 gap-6"></div>
             </section>
 
@@ -487,7 +493,67 @@
                 </div>
             `).join('') || '<div class="text-center py-10 opacity-30 text-xs italic">Katalog kosong</div>';
         }
+// Render buku sesuai kategori terpilih
+function renderBooksByCategory(cat) {
+    const booksInCat = state.books.filter(b => b.kategori === cat);
+    const container = document.getElementById('list-books');
 
+    container.innerHTML = booksInCat.map(b => `
+        <div class="glass-card overflow-hidden rounded-[32px] flex mb-4">
+            <div class="w-28 h-40 bg-slate-100 flex-shrink-0 relative overflow-hidden">
+                <img src="${b.fotoUrl || 'https://images.unsplash.com/photo-1543002588-bfa74002ed7e?w=300'}" 
+                     class="w-full h-full object-cover" 
+                     onerror="this.src='https://images.unsplash.com/photo-1543002588-bfa74002ed7e?w=300'">
+                <div class="absolute top-2 left-2 px-2 py-0.5 bg-white/90 rounded-full text-[8px] font-black text-blue-600 uppercase shadow-sm">${b.kategori}</div>
+            </div>
+            <div class="p-4 flex-1 flex flex-col justify-between">
+                <div>
+                    <h4 class="font-extrabold text-slate-800 text-sm mt-1 leading-tight line-clamp-2">${b.judul}</h4>
+                    <div class="flex items-center justify-between mt-3 bg-slate-50 p-2 rounded-xl border border-slate-100">
+                        <button onclick="changeStock(${b.id}, -1)" class="w-8 h-8 flex items-center justify-center bg-white rounded-lg shadow-sm text-red-500 active:scale-90 transition-all">
+                            <i class="fas fa-minus text-[10px]"></i>
+                        </button>
+                        <div class="text-center px-2">
+                            <p class="text-[8px] text-slate-400 font-bold uppercase leading-none mb-1">Stok</p>
+                            <span id="stock-val-${b.id}" class="text-sm font-black text-slate-800">${b.stok}</span>
+                        </div>
+                        <button onclick="changeStock(${b.id}, 1)" class="w-8 h-8 flex items-center justify-center bg-white rounded-lg shadow-sm text-emerald-500 active:scale-90 transition-all">
+                            <i class="fas fa-plus text-[10px]"></i>
+                        </button>
+                    </div>
+                </div>
+                <div class="flex gap-2 mt-3">
+                    <button onclick="deleteBook(${b.id})" class="text-red-300 hover:text-red-500 text-[10px] font-bold uppercase transition-all px-2 py-1">
+                        <i class="fas fa-trash-can mr-1"></i> Hapus
+                    </button>
+                </div>
+            </div>
+        </div>
+    `).join('') || `<div class="text-center py-10 opacity-30 text-xs italic">Belum ada buku di kategori ini</div>`;
+}
+
+// Event listener untuk tab
+document.querySelectorAll('.tab-btn').forEach(btn => {
+    btn.addEventListener('click', () => {
+        // Reset semua tombol
+        document.querySelectorAll('.tab-btn').forEach(b => {
+            b.classList.remove('bg-blue-600','text-white');
+            b.classList.add('bg-slate-200','text-slate-700');
+        });
+        // Aktifkan tombol yang diklik
+        btn.classList.add('bg-blue-600','text-white');
+        btn.classList.remove('bg-slate-200','text-slate-700');
+
+        // Render buku sesuai kategori
+        const cat = btn.getAttribute('data-cat');
+        renderBooksByCategory(cat);
+    });
+});
+
+// Render default kategori pertama saat load
+if(state.books.length > 0){
+    renderBooksByCategory('Pelajaran');
+}
        function renderLoans(list) {
     const today = new Date();
     today.setHours(0,0,0,0);
