--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     <div id="loadingOverlay" class="fixed inset-0 z-[2000] hidden bg-white/70 backdrop-blur-sm flex items-center justify-center">
         <div class="flex flex-col items-center">
             <div class="w-12 h-12 border-4 border-blue-600 border-t-transparent rounded-full animate-spin"></div>
-            <p class="mt-4 font-bold text-slate-800 tracking-tight">Menyinkronkan...</p>
+            <p class="mt-4 font-bold text-slate-800 tracking-tight">Loading Cuy</p>
         </div>
     </div>
 
@@ -116,7 +116,7 @@
         <div class="w-full max-w-md animate-in fade-in zoom-in duration-500">
             <div class="text-center mb-10">
               <div class="w-20 h-20 bg-white rounded-3xl flex items-center justify-center mx-auto shadow-2xl mb-4 overflow-hidden">
-    <img src="logo.jpg" alt="Logo DigiPustaka" class="w-full h-full object-cover">
+    <img src="logo.jpg" alt="Logo DigiPustaka" class="w-24 h-24 object-cover">
 </div>
                 <h1 class="text-4xl font-black text-white tracking-tight">Digi<span class="text-blue-400">Pustaka</span></h1>
                 <p class="text-slate-300 font-medium mt-2">Sistem Perpustakaan Digital</p> <p style="color: white;"> <small>by:raffhkm</small></p>
@@ -145,7 +145,7 @@
         <header class="bg-gradient-to-r from-blue-600 to-blue-800 text-white sticky top-0 z-[100] px-6 py-5 flex justify-between items-center border-b border-blue-500/30">
             <div class="flex items-center gap-4">
               <div class="w-11 h-11 bg-blue-50 rounded-2xl flex items-center justify-center shadow-inner overflow-hidden">
-    <img src="logo.jpg" alt="Logo" class="w-full h-full object-cover">
+    <img src="logo.jpg" alt="Logo" class="w-15 h-15 object-cover">
 </div>
                 <div>
                     <h2 id="pageTitle" class="text-lg font-extrabold text-white leading-none">Dashboard</h2>
