--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     <img src="logo.jpg" alt="Logo DigiPustaka" class="w-full h-full object-cover">
 </div>
                 <h1 class="text-4xl font-black text-white tracking-tight">Digi<span class="text-blue-400">Pustaka</span></h1>
-                <p class="text-slate-300 font-medium mt-2">Sistem Perpustakaan Digital</p> <p style="color: white;"> <small>by:raffhkm</small></p>
+                <p class="text-slate-300 font-medium mt-2">Sistem Perpustakaan Digital</p> <p style="color: white;" class="text-slate-300 font-medium mt-2"> <small>DEVELOPED BY RAFFHKM</small></p>
             </div>
 
             <div class="glass-card p-8 rounded-[32px] space-y-6">
@@ -150,7 +150,7 @@
                 <div>
                     <h2 id="pageTitle" class="text-lg font-extrabold text-white leading-none">Dashboard</h2>
                     <p class="text-[10px] text-blue-100 font-bold uppercase tracking-tighter mt-1">SISTEM PERPUSTAKAAN DIGITAL</p>
-                    <p class="text-[10px] text-blue-100 font-bold uppercase tracking-tighter mt-1"><small>by:raffhkm</small></p>
+                    <p class="text-[10px] text-blue-100 font-bold uppercase tracking-tighter mt-1"><small>Developed by raffhkm</small></p>
                 </div>
             </div>
             <div class="flex items-center gap-2">
