--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     <img src="logo.jpg" alt="Logo DigiPustaka" class="w-full h-full object-cover">
 </div>
                 <h1 class="text-4xl font-black text-white tracking-tight">Digi<span class="text-blue-400">Pustaka</span></h1>
-                <p class="text-slate-300 font-medium mt-2">Sistem Perpustakaan Digital</p> <p style="color: white;" class="text-slate-300 font-medium mt-2"> <small>DEVELOPED BY RAFFHKM</small></p>
+                <p class="text-slate-300 font-medium mt-2">Sistem Perpustakaan Digital</p> <p class="text-slate-300 font-medium mt-2"> <small>DEVELOPED BY RAFFHKM</small></p>
             </div>
 
             <div class="glass-card p-8 rounded-[32px] space-y-6">
@@ -184,8 +184,8 @@
                 <i class="fas fa-address-book text-xl"></i>
             </div>
             <div class="text-left">
-                <p class="text-sm font-extrabold tracking-tight">Buku Tamu Pengunjung</p>
-                <p class="text-[10px] text-purple-100 font-medium">Klik untuk mencatat kehadiran siswa</p>
+                <p class="text-sm font-extrabold tracking-tight">Kehadiran Pengunjung Perpustakaan</p>
+                <p class="text-[10px] text-purple-100 font-medium">Klik untuk mencatat kehadiran tamu pengunjung</p>
             </div>
         </div>
         <div class="w-8 h-8 bg-black/10 rounded-full flex items-center justify-center">
