--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                         <h3 id="stat-anggota" class="text-3xl font-black">0</h3>
                     </div>
                     <div class="glass-card p-5 rounded-3xl border-l-4 border-orange-500">
-                        <p class="text-[10px] text-slate-400 font-bold uppercase">Jumlah Buku</p>
+                        <p class="text-[10px] text-slate-400 font-bold uppercase">Jumlah Jenis Buku</p>
                         <h3 id="stat-buku" class="text-3xl font-black text-slate-800">0</h3>
                     </div>
                 </div>
