--- a/index.html
+++ b/index.html
@@ -115,10 +115,10 @@
         <div class="mt-16 text-center">
             <div class="inline-block p-1 px-4 bg-white/5 backdrop-blur-md rounded-full border border-white/10">
                 <p class="text-slate-400 text-[10px] font-bold uppercase tracking-widest">
-                    Developed with <i class="fas fa-heart text-red-500 mx-1"></i> by <span class="text-white">raffhkm</span>
+                    Developed with by <span class="text-white">raffhkm</span>
                 </p>
             </div>
-            <p class="text-slate-600 text-[8px] mt-4 font-black uppercase tracking-widest">© 2024 DigiPustaka System • v2.0</p>
+            <p class="text-slate-600 text-[8px] mt-4 font-black uppercase tracking-widest">© 2026 DigiPustaka </p>
         </div>
     </div>
 
