--- a/admin.html
+++ b/admin.html
@@ -160,6 +160,14 @@
                 <button onclick="handleLogin()" class="w-full btn-primary text-white py-5 rounded-2xl font-bold text-lg active:scale-[0.98] transition-all">
                     Masuk Sekarang
                 </button>
+               <div class="pt-2">
+    <a href="index.html" class="group w-full flex items-center justify-center gap-2 py-3 text-slate-400 hover:text-blue-600 font-semibold text-sm transition-all duration-300">
+        <div class="w-8 h-8 rounded-full bg-slate-50 group-hover:bg-blue-50 flex items-center justify-center transition-colors">
+            <i class="fas fa-arrow-left text-[10px] group-hover:-translate-x-0.5 transition-transform"></i>
+        </div>
+        <span>Kembali</span>
+    </a>
+</div>
             </div>
         </div>
     </div>
